--- a/tests/testAutopas/CMakeLists.txt
+++ b/tests/testAutopas/CMakeLists.txt
@@ -16,12 +16,23 @@ endif ()
 option(AUTOPAS_USE_TEST_GLOB "Testing: Use one cpp file that includes all other cpp files. Reduces the amount of needed template instantiations." OFF)
 
 if(AUTOPAS_USE_TEST_GLOB)
+    # Create new list.
     set(NEW_LIST ${MY_SRC})
+
+    # Prepend each element of the list with '#include "' and append '"\n'.
+    # This will generate an include directive for each file.
     list(TRANSFORM NEW_LIST PREPEND "#include \"")
     list(TRANSFORM NEW_LIST APPEND "\"\n")
+
+    # Create a variable that holds the test file name.
+
     set(AUTOPAS_TEST_FILES ${CMAKE_CURRENT_BINARY_DIR}/test_glob.cpp)
+
+    # Write the content of NEW_LIST to the file.
+    # The content contains includes to each entry of MY_SRC.
     file(WRITE ${AUTOPAS_TEST_FILES} ${NEW_LIST})
 else()
+    # If we do not use one global file, we define AUTOPAS_TEST_FILES as the normal sources.
     set(AUTOPAS_TEST_FILES ${MY_SRC})
 endif()
 
