--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -8,13 +8,20 @@ extraction:
         - cmake
         - libssl-dev
     after_prepare:    # Customizable step used by all languages.
+      # installs cmake!
       - wget -O cmake.tar.gz https://github.com/Kitware/CMake/releases/download/v3.16.4/cmake-3.16.4.tar.gz
       - tar zxf cmake.tar.gz
       - cd cmake-*/
       - mkdir build
       - cd build
-      - cmake -DCMAKE_INSTALL_PREFIX:PATH=~/.local/ -DCMAKE_BUILD_TYPE=Release -DAUTOPAS_USE_TEST_GLOB=ON ..
+      - cmake -DCMAKE_INSTALL_PREFIX:PATH=~/.local/ -DCMAKE_BUILD_TYPE=Release ..
       - make install
       - ls ~/.local/bin
-      - export PATH=~/.local/bin:$PATH
+      - export PATH=~/.local/bin:$PATH   # env variables are propagated, so this is visible in the configure step!
       - cmake --version
+    configure:
+      command:
+      - mkdir build
+      - cd build
+      # uses AUTOPAS_USE_TEST_GLOB to speed up compilation.
+      - cmake -DAUTOPAS_USE_TEST_GLOB=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fpermissive .. 
