add more options in help of fixing things

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -22,7 +22,7 @@ extraction:
       - cmake --version
     configure:
       command:
-      - mkdir _lgtm_build_dir
+      - mkdir -p _lgtm_build_dir
       - cd _lgtm_build_dir
       # uses AUTOPAS_USE_TEST_GLOB to speed up compilation.
-      - cmake -DAUTOPAS_USE_TEST_GLOB=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fpermissive .. 
+      - cmake -DAUTOPAS_USE_TEST_GLOB=ON -DCMAKE_VERBOSE_MAKEFILE=ON -DBUILD_DOCS=OFF -DCATKIN_ENABLE_TESTING=OFF -DBUILD_DOCUMENTATION=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fpermissive ..
