--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -26,3 +26,6 @@ extraction:
       - cd _lgtm_build_dir
       # uses AUTOPAS_USE_TEST_GLOB to speed up compilation.
       - cmake -DAUTOPAS_USE_TEST_GLOB=ON -DCMAKE_VERBOSE_MAKEFILE=ON -DBUILD_DOCS=OFF -DCATKIN_ENABLE_TESTING=OFF -DBUILD_DOCUMENTATION=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fpermissive ..
+    index:
+      build_command:
+        - make -j2
