--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -25,8 +25,8 @@ extraction:
       - mkdir -p _lgtm_build_dir
       - cd _lgtm_build_dir
       # uses AUTOPAS_USE_TEST_GLOB to speed up compilation.
-      - CC=clang CXX=clang++ cmake -DAUTOPAS_USE_TEST_GLOB=OFF -DCMAKE_VERBOSE_MAKEFILE=ON -DBUILD_DOCS=OFF -DCATKIN_ENABLE_TESTING=OFF -DBUILD_DOCUMENTATION=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fpermissive ..
+      - CC=clang CXX=clang++ cmake -DAUTOPAS_BUILD_EXAMPLES=OFF -DAUTOPAS_USE_TEST_GLOB=OFF -DCMAKE_VERBOSE_MAKEFILE=ON -DBUILD_DOCS=OFF -DCATKIN_ENABLE_TESTING=OFF -DBUILD_DOCUMENTATION=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fpermissive ..
     index:
       build_command:
         - cd _lgtm_build_dir
-        - make -j 4
+        - make -j 2
