--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,14 @@ add_subdirectory(tests)
 
 include(doxygen) # does not really need a target but the variable AUTOPAS_BUILD_EXAMPLES, which is defined in examples.
 
+include(FetchContent)
+FetchContent_Declare(
+        kokkos
+        GIT_REPOSITORY "https://github.com/kokkos/kokkos.git"
+        GIT_TAG "3.3.00"
+)
+FetchContent_MakeAvailable(kokkos)
+
 # write version information
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
