--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,5 +1,8 @@
+# Dependencies needed by the main library target
 include(autopas_spdlog)
 include(harmony)
 include(autopas_eigen)
 
 add_subdirectory(fake-dlclose)
+
+# the other libraries in this folder are needed from elsewhere (examples, test, ...)
