--- a/examples/md-flexible/input/sameScenarioWithSmallDifferences/same_rank_4.yaml
+++ b/examples/md-flexible/input/sameScenarioWithSmallDifferences/same_rank_4.yaml
@@ -38,5 +38,6 @@ log-level                        :  debug
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
-max-difference-for-bucket        :  0.2
-weight-for-max-density           :  0.1
+mpi-strategy                     :  divide-and-conquer
+max-difference-for-bucket        :  0.05
+weight-for-max-density           :  0.05
