--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 project(AutoPas)
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/)
-
 
 # CMAKE policies, etc.
 cmake_policy(SET CMP0054 NEW)
@@ -15,6 +13,9 @@ cmake_policy(SET CMP0079 NEW)
 set(AUTOPAS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(AUTOPAS_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
+# append custom modules to the module path
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/)
+# load custom conditional options
 include(optionConditional)
 
 # Determine if AutoPas is built as the primary project or not.
@@ -59,8 +60,6 @@ if (NOT CMAKE_BUILD_TYPE)
 endif ()
 
 enable_testing()
-
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/)
 
 option_conditional(AUTOPAS_FORMATTING_TARGETS
         "Adds targets for code formatting in AutoPas. Highly useful when developing AutoPas but might cause conflicts when only using it."
