--- a/examples/md-flexible/input/SpinodalDecomposition.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition.yaml
@@ -1,10 +1,11 @@
 functor                          :  Lennard-Jones (12-6)
 cutoff                           :  2.5
+verlet-rebuild-frequency         :  10 # significantly reduced rebuild frequency (default: 20)
 # these are the box size values for a equilibration with 160x160x160 and spacing 1.5
 box-min                          :  [-0.75, -0.75, -0.75]
-box-max                          :  [239.25, 239.25, 239.25]
+box-max                          :  [149.25, 149.25, 149.25] # [239.25, 239.25, 239.25]
 deltaT                           :  0.00182367
-iterations                       :  30000
+iterations                       :  40000
 periodic-boundaries              :  true
 thermostat:
   initialTemperature             :  0.7
@@ -13,5 +14,5 @@ thermostat:
   thermostatInterval             :  10
   addBrownianMotion              :  false
 vtk-filename                     :  SpinodalDecomposition
-vtk-write-frequency              :  30000
-checkpoint                       :  SpinodalDecomposition_equilibration_100000.vtk
+vtk-write-frequency              :  20000
+# checkpoint                       :  SpinodalDecomposition_equilibration_100000.vtk
